# Demodulation

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  uncrustify.cfg  unittest.cmake
Dest/: Notes.txt  testIn.iqf  testOut.iqf
include/Demodulation/: demod.h  fakeReceiver.h  fftw.h  filter.h  genNoise.h  gen_sin.h  resample.h
include/demodulation/: demod.h
libs/DSP/: CMakeLists.txt
libs/DSP/include/DSP/: fft.h  fftw.h  filter.h  resample.h
libs/DSP/source/: fft.cpp
libs/DSP/test/: fftwTest.cpp  filterTest.cpp  resample_test.cpp
libs/dsp/: CMakeLists.txt
libs/dsp/include/dsp/: fft.h  filter.h  resample.h
libs/dsp/source/: fft.cpp
libs/dsp/test/: fftwTest.cpp  filterTest.cpp  resample_test.cpp
libs/hackrf/: CMakeLists.txt  unittest.cmake
libs/hackrf/include/hackrf/: dev.h  receiver.h  tools.h  transfercontrol.h  utils.h
libs/hackrf/source/: dev.cpp  receiver.cpp  tools.cpp  transfercontrol.cpp  utils.cpp
libs/hackrf/test/: main.cpp  testdevice.cpp
libs/hackrfAPI/: CMakeLists.txt
libs/hackrfAPI/include/hackrfAPI/: hackrf.h
libs/hackrfAPI/source/: hackrf.c
test/: demodAMtest.cpp  demodFMtest.cpp  fftwTest.cpp  filterTest.cpp  genNoiseTest.cpp  resample_test.cpp  sin_test.cpp
test/config/: conf.cmake  resamComVALUE_testOK  resamComVALUE_testXX  resamVALUE_testOK  resamVALUE_testXX  testDataAM  testDataDAM  testDataDFM  testDataFM  testDataFftwB  testDataFftwBin  testDataFftwBout  testDataFftwF  testDataFftwFin  testDataFilterIn  testDataFilterInC0  testDataFilterOut  testDataFilterOutC0
